Corrected validation