@@ -1,13 +1,19 @@
 package pl.edu.agh.to2.cleaner.gui.presenter;
 
+import javafx.beans.binding.Bindings;
 import javafx.beans.property.ObjectProperty;
 import javafx.beans.property.SimpleObjectProperty;
 import javafx.fxml.FXML;
 import javafx.scene.control.Button;
 import javafx.scene.control.Label;
+import javafx.scene.control.ListView;
+import javafx.scene.control.ScrollPane;
+import javafx.scene.layout.HBox;
 import pl.edu.agh.to2.cleaner.command.FileFinder;
 import pl.edu.agh.to2.cleaner.gui.AppController;
 import pl.edu.agh.to2.cleaner.model.FileInfo;
+import pl.edu.agh.to2.cleaner.repository.FileInfoRepository;
+import pl.edu.agh.to2.cleaner.session.SessionService;
 
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -17,44 +23,85 @@ import java.util.List;
 
 public class ResultsPresenter implements Presenter{
 
+    private SessionService sessionService = new SessionService();
+    private FileInfoRepository fileInfoRepository;
     private AppController appController;
-    private ObjectProperty<String> directory = new SimpleObjectProperty<>();
+//    private ObjectProperty<String> directory = new SimpleObjectProperty<>();
     private List<FileFinder> searchingTypes = new ArrayList<>();
+    private ObjectProperty<Path> path = new SimpleObjectProperty<>();
 
     @FXML
     private Button backButton;
 
     @FXML
+    private Button searchButton;
+
+    @FXML
+    private Button deleteButton;
+
+    @FXML
+    private Button archiveButton;
+
+    @FXML
+    private Button moveButton;
+
+    @FXML
+    private Button renameButton;
+
+    @FXML
     private Label receivedPath;
 
+    @FXML
+    private ListView<HBox> searchListView;
+
+
     public ResultsPresenter() {
+        this.fileInfoRepository = new FileInfoRepository(sessionService);
     }
 
     @Override
     public void initialize() {
         this.appController = AppController.getInstance();
-        directory.addListener((source, oldValue, newValue) -> {
-            if (directory.getValue() != null && !directory.getValue().isEmpty()) {
-                receivedPath.setText(directory.getValue());
-                System.out.println(directory.getValue());
+        path.addListener((source, oldValue, newValue) -> {
+//            if (path.getValue() != null && !path.getValue().isEmpty()) {
+            if (validatePath(path.getValue().toString())) {
+                receivedPath.setText(path.getValue().toString());
+                System.out.println(path.getValue().toString());
             }
             else {
                 receivedPath.setText("NO DIRECTORY");
             }
         });
+
+
+
+//        for (int i = 0; i < 10; i++) {
+//            searchListView.getItems().add(new);
+//        }
+
+        // Bindings
+//        deleteButton.disableProperty().bind(Bindings.isEmpty(searchPane.getSelec));
+//        archiveButton;
+//        moveButton;
+//        renameButton
     }
 
-    public boolean setDirectory(String directory) {
-        if (validatePath(directory)) {
-            this.directory.setValue(directory);
-            System.out.println(this.directory.toString());
+    public boolean setDirectory(String stringPath) {
+
+        if (validatePath(stringPath)) {
+            Path path = Path.of(stringPath);
+            this.path.setValue(path);
+            System.out.println(this.path.getValue().toString());
             return true;
         }
+
         return false;
     }
 
-    public boolean setSearchingTypes(List<FileFinder> searchingTypes) {
-        for (FileFinder search : searchingTypes) {
+    public boolean setSearchingTypes(List<FileFinder> givenSearchingTypes) {
+        searchingTypes.clear();
+
+        for (FileFinder search : givenSearchingTypes) {
             if (!searchingTypes.contains(search)) {
                 searchingTypes.add(search);
             }
@@ -64,10 +111,7 @@ public class ResultsPresenter implements Presenter{
 
     @Override
     public boolean isViewAvailable() {
-        if (this.directory != null) {
-            return true;
-        }
-        return false;
+        return path != null;
     }
 
     @FXML
@@ -75,13 +119,15 @@ public class ResultsPresenter implements Presenter{
         appController.changeScene("fileChoose");
     }
 
-    public boolean validatePath(String path) {
-        if (path != null) {
-            Path directoryPath = Paths.get(path);
-            boolean doesExist = Files.exists(directoryPath);
-            boolean isDirectory = Files.isDirectory(directoryPath);
+    private boolean validatePath(String stringPath) {
+        if (stringPath != null) {
+            Path path = Path.of(stringPath);
+            boolean doesExist = Files.exists(path);
+            boolean isDirectory = Files.isDirectory(path);
+            boolean isEmpty = path.toString().isEmpty();
+//            System.out.println("Ścieżka: " + path + path.toString().isEmpty());
 
-            return doesExist && isDirectory;
+            return doesExist && isDirectory && !isEmpty;
         }
         return false;
     }
